# ft_printf

./: CMakeLists.txt  Makefile
includes/: libftprintf.h
srcs/: format_a.c  format_another.c  format_c.c  format_d.c  format_e.c  format_f.c  format_i.c  format_o.c  format_p.c  format_percent.c  format_s.c  format_u.c  format_x.c  ft_isdigit.c  ft_power.c  ft_printf.c  ft_printf_format.c  ft_printf_get_value.c  ft_printf_read_format.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putnstr_fd.c  ft_putnwstr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putwchar_fd.c  ft_putwstr_fd.c  ft_strdup.c  ft_strncpy_count.c  ft_wcharlen.c  ft_write.c  ft_wstrlen.c  test_main.c
srcs_old/: format_c.c  format_d.c  format_f.c  format_g.c  format_o.c  format_p.c  format_s.c  format_u.c  format_x.c  ft_atoi.c  ft_bzero.c  ft_memset.c  ft_printf.c  ft_printf_format.c  ft_printf_read_format.c  ft_strlen.c  ft_write.c  test_main.c
